updating files commit

--- a/index.html
+++ b/index.html
@@ -30,42 +30,60 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="time-block">9am
-        <input>
+      <div class="time-block">
+        <p id="time">9am</p>
+        <input id="time-block-input">
         <button id="saveBtn"></button>
       </div>
-      <div class="time-block">10am
-        <input>
+
+      <div class="time-block">
+        <p id="time">10am</p>
+        <input id="time-block-input">
         <button id="saveBtn"></button>
       </div>
-      <div class="time-block">11am
-        <input>
+
+      <div class="time-block">
+        <p id="time">11am</p>
+        <input id="time-block-input">
         <button id="saveBtn"></button>
       </div>
-      <div class="time-block">12pm
-        <input>
+
+      <div class="time-block">
+        <p id="time">12pm</p>
+        <input id="time-block-input">
         <button id="saveBtn"></button>
       </div>
-      <div class="time-block">1pm
-        <input>
+
+      <div class="time-block">
+        <p id="time">1pm</p>
+        <input id="time-block-input">
         <button id="saveBtn"></button>
       </div>
-      <div class="time-block">2pm
-        <input>
+
+      <div class="time-block">
+        <p id="time">2pm</p>
+        <input id="time-block-input">
         <button id="saveBtn"></button>
       </div>
-      <div class="time-block">3pm
-        <input>
+
+      <div class="time-block">
+        <p id="time">3pm</p>
+        <input id="time-block-input">
         <button id="saveBtn"></button>
       </div>
-      <div class="time-block">4pm
-        <input>
+
+      <div class="time-block">
+        <p id="time">4pm</p>
+        <input id="time-block-input">
         <button id="saveBtn"></button>
       </div>
-      <div class="time-block">5pm
-        <input>
+
+      <div class="time-block">
+        <p id="time">5pm</p>
+        <input id="time-block-input">
         <button id="saveBtn"></button>
       </div>
+      
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
