updating files commit

--- a/index.html
+++ b/index.html
@@ -32,61 +32,62 @@
       <!-- Timeblocks go here -->
       <div class="time-block">
         <p id="time">9am</p>
-        <input id="time-block-input">
-        <button id="saveBtn"></button>
+        <input class="time-block-input past future present">
+        <button id="saveBtn">Save</button>
       </div>
 
       <div class="time-block">
         <p id="time">10am</p>
-        <input id="time-block-input">
-        <button id="saveBtn"></button>
+        <input class="time-block-input past future present">
+        <button id="saveBtn">Save</button>
       </div>
 
       <div class="time-block">
         <p id="time">11am</p>
-        <input id="time-block-input">
-        <button id="saveBtn"></button>
+        <input class="time-block-input past future present">
+        <button id="saveBtn">Save</button>
       </div>
 
       <div class="time-block">
         <p id="time">12pm</p>
-        <input id="time-block-input">
-        <button id="saveBtn"></button>
+        <input class="time-block-input past future present">
+        <button id="saveBtn">Save</button>
       </div>
 
       <div class="time-block">
         <p id="time">1pm</p>
-        <input id="time-block-input">
-        <button id="saveBtn"></button>
+        <input class="time-block-input past future present">
+        <button id="saveBtn">Save</button>
       </div>
 
       <div class="time-block">
         <p id="time">2pm</p>
-        <input id="time-block-input">
-        <button id="saveBtn"></button>
+        <input class="time-block-input past future present">
+        <button id="saveBtn">Save</button>
       </div>
 
       <div class="time-block">
         <p id="time">3pm</p>
-        <input id="time-block-input">
-        <button id="saveBtn"></button>
+        <input class="time-block-input past future present">
+        <button id="saveBtn">Save</button>
       </div>
 
       <div class="time-block">
         <p id="time">4pm</p>
-        <input id="time-block-input">
-        <button id="saveBtn"></button>
+        <input class="time-block-input past future present">
+        <button id="saveBtn">Save</button>
       </div>
 
       <div class="time-block">
         <p id="time">5pm</p>
-        <input id="time-block-input">
-        <button id="saveBtn"></button>
+        <input class="time-block-input past future present">
+        <button id="saveBtn">Save</button>
       </div>
-      
+
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./Assets/Script.js"></script>
   </body>
 </html>
