updating files commit

--- a/index.html
+++ b/index.html
@@ -30,57 +30,57 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="time-block">
+      <div class="time-block" data-time=9>
         <p id="time">9am</p>
-        <input class="time-block-input past future present">
+        <input class="time-block-input">
         <button id="saveBtn">Save</button>
       </div>
 
-      <div class="time-block">
+      <div class="time-block" data-time=10>
         <p id="time">10am</p>
-        <input class="time-block-input past future present">
+        <input class="time-block-input">
         <button id="saveBtn">Save</button>
       </div>
 
-      <div class="time-block">
+      <div class="time-block" data-time=11>
         <p id="time">11am</p>
-        <input class="time-block-input past future present">
+        <input class="time-block-input">
         <button id="saveBtn">Save</button>
       </div>
 
-      <div class="time-block">
+      <div class="time-block" data-time=12>
         <p id="time">12pm</p>
-        <input class="time-block-input past future present">
+        <input class="time-block-input">
         <button id="saveBtn">Save</button>
       </div>
 
-      <div class="time-block">
+      <div class="time-block" data-time=13>
         <p id="time">1pm</p>
-        <input class="time-block-input past future present">
+        <input class="time-block-input">
         <button id="saveBtn">Save</button>
       </div>
 
-      <div class="time-block">
+      <div class="time-block" data-time=14>
         <p id="time">2pm</p>
-        <input class="time-block-input past future present">
+        <input class="time-block-input">
         <button id="saveBtn">Save</button>
       </div>
 
-      <div class="time-block">
+      <div class="time-block" data-time=15>
         <p id="time">3pm</p>
-        <input class="time-block-input past future present">
+        <input class="time-block-input">
         <button id="saveBtn">Save</button>
       </div>
 
-      <div class="time-block">
+      <div class="time-block" data-time=16>
         <p id="time">4pm</p>
-        <input class="time-block-input past future present">
+        <input class="time-block-input">
         <button id="saveBtn">Save</button>
       </div>
 
-      <div class="time-block">
+      <div class="time-block" data-time=17>
         <p id="time">5pm</p>
-        <input class="time-block-input past future present">
+        <input class="time-block-input">
         <button id="saveBtn">Save</button>
       </div>
 
