--- a/index.html
+++ b/index.html
@@ -32,56 +32,56 @@
       <!-- Timeblocks go here -->
       <div class="time-block" data-time=9>
         <p id="time">9am</p>
-        <input class="time-block-input">
-        <button id="saveBtn">Save</button>
+        <input class="time-block-input" id="9am">
+        <button id="saveBtn" onclick="handleSave('9am')">Save</button>
       </div>
 
       <div class="time-block" data-time=10>
         <p id="time">10am</p>
-        <input class="time-block-input">
-        <button id="saveBtn">Save</button>
+        <input class="time-block-input" id="10am">
+        <button id="saveBtn" onclick="handleSave('10am')">Save</button>
       </div>
 
       <div class="time-block" data-time=11>
         <p id="time">11am</p>
-        <input class="time-block-input">
-        <button id="saveBtn">Save</button>
+        <input class="time-block-input" id="11am">
+        <button id="saveBtn" onclick="handleSave('11am')">Save</button>
       </div>
 
       <div class="time-block" data-time=12>
         <p id="time">12pm</p>
-        <input class="time-block-input">
-        <button id="saveBtn">Save</button>
+        <input class="time-block-input" id="12pm">
+        <button id="saveBtn" onclick="handleSave('12pm')">Save</button>
       </div>
 
       <div class="time-block" data-time=13>
         <p id="time">1pm</p>
-        <input class="time-block-input">
-        <button id="saveBtn">Save</button>
+        <input class="time-block-input" id="1pm">
+        <button id="saveBtn" onclick="handleSave('1pm')">Save</button>
       </div>
 
       <div class="time-block" data-time=14>
         <p id="time">2pm</p>
-        <input class="time-block-input">
-        <button id="saveBtn">Save</button>
+        <input class="time-block-input" id="2pm">
+        <button id="saveBtn" onclick="handleSave('2pm')">Save</button>
       </div>
 
       <div class="time-block" data-time=15>
         <p id="time">3pm</p>
-        <input class="time-block-input">
-        <button id="saveBtn">Save</button>
+        <input class="time-block-input" id="3pm">
+        <button id="saveBtn" onclick="handleSave('3pm')">Save</button>
       </div>
 
       <div class="time-block" data-time=16>
         <p id="time">4pm</p>
-        <input class="time-block-input">
-        <button id="saveBtn">Save</button>
+        <input class="time-block-input"id="4pm">>
+        <button id="saveBtn" onclick="handleSave('4pm')">Save</button>
       </div>
 
       <div class="time-block" data-time=17>
         <p id="time">5pm</p>
-        <input class="time-block-input">
-        <button id="saveBtn">Save</button>
+        <input class="time-block-input" id="5pm">
+        <button id="saveBtn" onclick="handleSave('5pm')">Save</button>
       </div>
 
     </div>
