adding updated readme file

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
       <div class="time-block" data-time=16>
         <p id="time">4pm</p>
-        <input class="time-block-input"id="4pm">>
+        <input class="time-block-input"id="4pm">
         <button id="saveBtn" onclick="handleSave('4pm')">Save</button>
       </div>
 
